force-app/main/default/objects/Task__c/Task__c.object-meta.xml
<CustomObject>
    <label>RevOps Task</label>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RevOps Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>