force-app/main/default/objects/Task__c/fields/ActivityPlanName__c.field-meta.xml
<CustomField>
    <fullName>ActivityPlanName__c</fullName>
    <label>Activity Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>