force-app/main/default/objects/Task__c/fields/ActivityTypeName__c.field-meta.xml
<CustomField>
    <fullName>ActivityTypeName__c</fullName>
    <label>Activity Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>