force-app/main/default/objects/Task__c/fields/Datetime__c.field-meta.xml
<CustomField>
    <fullName>Datetime__c</fullName>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>