force-app/main/default/objects/Task__c/fields/ExecutiveTitleName__c.field-meta.xml
<CustomField>
    <fullName>ExecutiveTitleName__c</fullName>
    <label>Executive Title Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>