force-app/main/default/objects/Task__c/fields/RelationshipPlanName__c.field-meta.xml
<CustomField>
    <fullName>RelationshipPlanName__c</fullName>
    <label>Relationship Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>