force-app/main/default/objects/Task__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Result</label>
    <type>Checkbox</type>
</CustomField>