force-app/main/default/objects/Task__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&apos;Activity&apos;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activity</fullName>
                <default>true</default>
                <label>Activity</label>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>